--- a/BlogUI/Views/Articles/Edit.cshtml
+++ b/BlogUI/Views/Articles/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@using BlogLibrary.Models.Enum
+﻿@using Microsoft.AspNetCore.Identity
+@using BlogLibrary.Databases.Interfaces
+@inject IImageService imageService
+@using BlogLibrary.Models.Enum
 @model BlogLibrary.Models.ArticleModel
 
 @{
@@ -7,10 +10,10 @@
 
 <h1>Edit</h1>
 
-<h4>ArticleModel</h4>
+<h4>Article</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -41,8 +44,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.ImageId" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <input type="file" name="NewImage" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.ImageId" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
+                <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -57,4 +60,21 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script>
+        $('#Body').summernote({
+            placeholder: 'Message',
+            tabsize: 2,
+            height: 120,
+            toolbar: [
+                ['style', ['style']],
+                ['font', ['bold', 'underline', 'clear']],
+                ['color', ['color']],
+                ['para', ['ul', 'ol', 'paragraph']],
+                ['table', ['table']],
+                ['insert', ['link', 'picture', 'video']],
+                ['view', ['fullscreen', 'codeview', 'help']]
+            ]
+        });
+    </script>
 }
