--- a/BlogUI/Views/Series/Details.cshtml
+++ b/BlogUI/Views/Series/Details.cshtml
@@ -1,45 +1,22 @@
-﻿@model BlogLibrary.Models.SeriesModel
+﻿@using BlogLibrary.Databases.Interfaces
+@inject IImageService imageService
+@model BlogLibrary.Models.SeriesModel
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>@Html.DisplayFor(model => model.Title)</h1>
 
 <div>
-    <h4>SeriesModel</h4>
+    <h4>@Html.DisplayFor(model => model.Description)</h4>
     <hr />
+    @Html.DisplayFor(model => model.Created) | @Html.DisplayFor(model => model.Updated)
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Created)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Created)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Updated)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Updated)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image.Photo)
-        </dd>
+        @if (Model.Image != null)
+        {
+            <img src="@imageService.DecodeImage(Model.Image.ImageData, Model.Image.ImageExtension)" />
+        }
     </dl>
 </div>
 <div>
