--- a/BlogUI/Views/Series/Edit.cshtml
+++ b/BlogUI/Views/Series/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@model BlogLibrary.Models.SeriesModel
+﻿@using Microsoft.AspNetCore.Identity
+@using BlogLibrary.Databases.Interfaces
+@inject IImageService imageService
+@model BlogLibrary.Models.SeriesModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +9,7 @@
 
 <h1>Edit</h1>
 
-<h4>SeriesModel</h4>
+<h4>Series</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,8 +28,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <input type="file" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <input type="file" name="NewImage" asp-for="Image.Photo" class="form-control" asp-items="ViewBag.Image" accept=".jpg,.jpeg,.png,.ico,.gif,.svg"></input>
+                <span asp-validation-for="Image.Photo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
