--- a/BlogUI/Views/Series/Index.cshtml
+++ b/BlogUI/Views/Series/Index.cshtml
@@ -50,7 +50,7 @@
             <td>
                 @if (item.Image != null)
                 {
-                    <img src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
+                    <img calss="img-fluid" width="200px" src="@imageService.DecodeImage(item.Image.ImageData, item.Image.ImageExtension)" />
                 }
 
             </td>
