--- a/BlogUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -9,19 +9,27 @@
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
             <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <label>Select Avatar</label>
+                <div class="custom-file">
+                    <input type="file" asp-for="Input.Image.Photo" class="form-control-file" accept=".jpg,.jpeg,.png,.ico,.gif,.svg" />
+                    <span asp-validation-for="Input.Image.Photo" class="text-danger"></span>
+                </div>
             </div>
             <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
         </form>
+    </div>
+    <div class="col-md-6">
+        @if (Model.CurrentImage != null)
+        {
+        <img src="@Model.CurrentImage" class="img-fluid rounded-circle img-thumbnail">
+        }   
     </div>
 </div>
 
