--- a/BlogUI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BlogUI/Areas/Identity/Pages/Account/Register.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form asp-route-returnUrl="@Model.ReturnUrl" method="post" enctype="multipart/form-data">
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -21,6 +21,13 @@
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label>Select Avatar</label>
+                <div class="custom-file">
+                    <input type="file" asp-for="Input.Image.Photo" class="form-control-file" accept=".jpg,.jpeg,.png,.ico,.gif,.svg" />
+                    <span asp-validation-for="Input.Image.Photo" class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group">
                 <label asp-for="Input.ConfirmPassword"></label>
