--- a/BlogUI/Views/Articles/Delete.cshtml
+++ b/BlogUI/Views/Articles/Delete.cshtml
@@ -1,4 +1,6 @@
-﻿@model BlogLibrary.Models.ArticleModel
+﻿@using BlogLibrary.Databases.Interfaces
+@inject IImageService imageService
+@model BlogLibrary.Models.ArticleModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -54,7 +56,7 @@
             @Html.DisplayFor(model => model.Image.Photo)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
