--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -24,6 +24,24 @@
             </p>
         </div>
     </div>
+    <hr />
+
+    <hr />
+    <article>
+       <div class="row">
+           <div class="col text-center font-weight-bold h3">
+               Custom Post Tags
+           </div>
+       </div>
+        <div class="row">
+            <div class="col text-center">
+                @foreach(var tag in Model.Tags)
+                {
+                    <a class="btn btn-outline-dark" asp-action="TagIndex" asp-route-tag="@tag.Tag.ToLower()">#@tag.Tag</a>
+                }
+            </div>
+        </div>
+    </article>
     <div>
         <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
         <a asp-action="Index">Back to List</a>
